# streamlog

./: README.md  pyproject.toml
src/streamlog/: cli.py  display.py  storage.py
