[project]
name = "streamlog"
version = "0.1.0"
description = "A Twitch stream session tracker for the terminal"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.4.1",
    "hatchling>=1.30.1",
    "rich>=15.0.0",
    "typer>=0.26.7",
]

[project.scripts]
streamlog = "streamlog.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/streamlog"]
